# oss-trend-radar

./: AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  SYSTEM_PROMPT.md  pyproject.toml
.claude/commands/: shiki.md
.github/ISSUE_TEMPLATE/: shiki_goal.yml  shiki_task.yml
.github/PULL_REQUEST_TEMPLATE/: shiki-task.md
.github/prompts/: cca-completion-check.md  codex-repair-handoff.md  codex-task-handoff.md
.github/workflows/: ci-tests.yml  ossradar-daily-report.yml  shiki-cca-completion.yml  shiki-claude-review.yml  shiki-mergegate.yml  shiki-orchestrator.yml  shiki-validate.yml
.shiki/: README.md  config.yaml  policy.example.yaml  repo.json
.shiki/dag/: G-0002.json  G-0003.json
.shiki/goals/: G-0002.json  G-0003.json
.shiki/handoffs/: T-0002-task.md
.shiki/ledger/: L-0002.json  L-0003.json  L-0004.json  L-0005.json  L-0006.json  L-0007.json  L-0008.json  L-0009.json  L-0010.json  L-0011.json  L-0012.json  L-0013.json  L-0014.json  (+4 more)
ossradar/: __init__.py  cli.py  github.py  models.py  report.py  snapshot.py
reports/: 2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md
scripts/: enforce_cca_verdict.py  mergegate_check.py  shiki.py  test_shiki_control_plane.sh  test_shiki_daemon_runner.sh  test_shiki_init.sh  test_shiki_run_orchestrator.sh  test_shiki_runtime_auth.sh  test_shiki_start.sh  validate_shiki.py
tests/: test_github.py  test_report.py  test_snapshot.py
(+70 files in other folders)
