[project]
name = "ossradar"
version = "0.1.0"
description = "Research GitHub trending OSS and star counts, emit Markdown reports"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
ossradar = "ossradar.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ossradar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
